[tool.poetry]
name = "tif2blender"
version = "1.1.0"
description = "Loading and handling microscopy data in Blender."
authors = ["Oane Gros <oane.gros@embl.de>"]
include = [
    {path = "README.md"}
]

[tool.poetry.dependencies]
python = "~=3.11.6"
bpy = ">=4.2.0"
tifffile = "==2023.4.12"
scikit-image = "==0.22.0"
numpy = "< 2.0.0"


[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pytest-snapshot = "*"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools_scm]

