[tool.poetry]
name = "microscopynodes"
version = "2.2.0"
description = "Loading and handling microscopy data in Blender."
authors = ["Oane Gros <oane.gros@embl.de>"]
include = [
    {path = "README.md"}
]

[tool.poetry.dependencies]
python = "~=3.11.6"
bpy = "==4.4.0"
tifffile = "==2023.4.12"
scikit-image = "==0.22.0"
numpy = "1.24.3"
zarr = "<3.0"
dask = "*"
imagecodecs = "*"
aiohttp = "*"
fsspec = "*"
cmap = "0.6.0"


[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-snapshot = "*"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools_scm]

